[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=1.82.4"
jxl-oxide = { git = "https://github.com/tirr-c/jxl-oxide.git"}
lazy_static = "1.4.0"
cmake = "=0.1.50"
cint = "0.3.1"